Fixed class => className in React; fixed issue with navbar not showing on scroll on other pages

--- a/london-bridges/src/components/Events/Events.css
+++ b/london-bridges/src/components/Events/Events.css
@@ -1,12 +1,3 @@
-.historyPage {
-    margin: 0 auto;
-    border: 0 none;
-    height: calc(100vh - 64px);
-    width: 100%;
-    position: relative;
-    overflow-x: hidden;
-    max-width: 100%;
-}
 
 @media (max-width: 768px) {
     .main {
