--- a/london-bridges/src/components/Team/Team.css
+++ b/london-bridges/src/components/Team/Team.css
@@ -17,17 +17,6 @@
     }
 }
 
-
-.webpage{
-    margin: 0 auto;
-    border: 0 none;
-    height: calc(100vh - 64px);
-    width: 100%;
-    position: relative;
-    overflow-x: hidden;
-    max-width: 100%;
-}
-
 .Title{
     font-family: "Inter", sans-serif;
     font-weight: 800;
